convert links to rails

--- a/app/views/pages/investigations.html.erb
+++ b/app/views/pages/investigations.html.erb
@@ -12,9 +12,9 @@
       <h1>Investigations</h1>
     </header>
 
-    <p class="lede">These investigations draw on <a href="/data/incidents">data</a> published by Detention Logs or relate to the project. They cover broad areas of immigration detention including suicide, hunger strikes and deportations, and tell these stories in many different ways. They have been written by Detention Logs journalists and by other journalists from news organisations across Australia.</p>
+    <p class="lede">These investigations draw on <%= link_to 'data', :incidents %> published by Detention Logs or relate to the project. They cover broad areas of immigration detention including suicide, hunger strikes and deportations, and tell these stories in many different ways. They have been written by Detention Logs journalists and by other journalists from news organisations across Australia.</p>
 
-    <p class="lede">Read our <a href="/investigations/recipe" title="An introduction to using Detention Logs in reporting or research.">Reporting Recipe</a> to find out how to approach this resource for your own investigation or research.</p>
+    <p class="lede">Read our <%= link_to 'Reporting Recipe', :investigations_recipe, title: 'An introduction to using Detention Logs in reporting or research.' %> to find out how to approach this resource for your own investigation or research.</p>
 
     <h2 id="deportedbydiacintoperpetuallimbo"><a href="http://www.newmatilda.com/2013/08/14/deported-diac-perpetual-limbo">Deported by DIAC Into Perpetual Limbo</a></h2>
 
