add incident about action

--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -13,7 +13,7 @@
 
       <%= render 'incidents/detail-report-link' %>
 
-      <%= link_to "What is an incident report?", "/data/incidents/about", :class => "supporting help" %>
+      <%= link_to "What is an incident report?", about_incidents_path, :class => "supporting help" %>
 
       <dl class="incident-data-list incident-primary-meta">
         <dt class="incident-field-label incident-type">Type</dt>
