--- a/app/views/pages/investigations_recipe.html.erb
+++ b/app/views/pages/investigations_recipe.html.erb
@@ -53,7 +53,7 @@
 
     <h2 id="approaching-incident-reports">Approaching detention centre incident reports</h2>
 
-    <p>First thing, you’ll want to <%= link_to "read about the Incident Report data", id: 'about_incidents', title: 'An introduction to incident reports' %> and <%= link_to "familiarise yourself by exploring", incidents_path, title: 'Explore incident reports from immigration detention facilities' %>. Once that&#8217;s done, one approach to analysing and finding stories in data is by taking <em>near</em> and <em>far</em> views.</p>
+    <p>First thing, you’ll want to <%= link_to "read about the Incident Report data", about_incidents_path, title: 'An introduction to incident reports' %> and <%= link_to "familiarise yourself by exploring", incidents_path, title: 'Explore incident reports from immigration detention facilities' %>. Once that&#8217;s done, one approach to analysing and finding stories in data is by taking <em>near</em> and <em>far</em> views.</p>
 
     <h3 id="far-view">The far view</h3>
 
