correct incident about url

--- a/app/views/incidents/_section-nav.html.erb
+++ b/app/views/incidents/_section-nav.html.erb
@@ -1,4 +1,4 @@
-<li><%= link_to "About Incident Reports", 'data/incidents/about' %></li>
+<li><%= link_to "About Incident Reports", about_incidents_path %></li>
 
 <li><%= link_to "Glossary", :glossary %></li>
 
