--- a/app/views/incidents/_index-results.html.erb
+++ b/app/views/incidents/_index-results.html.erb
@@ -5,12 +5,41 @@
 </article>
 
 <h1 class="incident-index-results-description">
-        <strong class="query-count"><%= @incidents.total_count %></strong> <% if params[:incident_type] %><strong class="type"><%= params[:incident_type] %></strong><% end %> incident reports <% if params[:by_detailed_report] %>with attatched <strong>Incident Detail Reports</strong> <% end %><% if @location_name %>from <strong class="location"><%= @location_name %></strong><% end %> between <strong class="start-date"><%= @start_date.strftime("%d %b %Y") %></strong> and <strong class="end-date"><%=@end_date.strftime("%d %b %Y") %>.</strong>
+  <strong class="query-count"><%= @incidents.total_count %></strong>
+
+  <% if params[:incident_type] %>
+  <strong class="type">
+    <%= params[:incident_type] %>
+  </strong>
+  <% end %>
+
+  incident reports
+
+  <% if params[:by_detailed_report] %>
+    with attatched <strong>Incident Detail Reports</strong>
+  <% end %>
+
+  <% if @location_name %>
+    from <strong class="location"><%= @location_name %></strong>
+  <% end %>
+
+  between
+
+  <strong class="start-date">
+    <%= @start_date.strftime("%d %b %Y") %>
+  </strong>
+
+  and
+
+  <strong class="end-date">
+    <%=@end_date.strftime("%d %b %Y") %>.
+  </strong>
 </h1>
 
 <section class="incident-index-results-reference">
-    <%= link_to "Permalink", params, class: 'incident-index-permalink', title: 'url to share or bookmark these results' %>
-    <!-- <a class="incident-index-order-by" href="" title="Reorder the filter results, currently sorted by newest first, to see the oldest incident first.">See oldest first</a> -->
+  <%= link_to "Permalink", params, class: 'incident-index-permalink', title: 'url to share or bookmark these results' %>
+
+  <!-- <a class="incident-index-order-by" href="" title="Reorder the filter results, currently sorted by newest first, to see the oldest incident first.">See oldest first</a> -->
     <!-- <div class="pagination-details"><%=  page_entries_info @incidents %></div>
     <%= paginate @incidents %> -->
-</section>
+  </section>
