--- a/app/views/incidents/_index-results.html.erb
+++ b/app/views/incidents/_index-results.html.erb
@@ -40,6 +40,10 @@
   <%= link_to "Permalink", params, class: 'incident-index-permalink', title: 'url to share or bookmark these results' %>
 
   <!-- <a class="incident-index-order-by" href="" title="Reorder the filter results, currently sorted by newest first, to see the oldest incident first.">See oldest first</a> -->
-    <!-- <div class="pagination-details"><%=  page_entries_info @incidents %></div>
-    <%= paginate @incidents %> -->
+    <nav class="pagination">
+      <p class="pagination-details">
+        <%=  page_entries_info @incidents %>
+      </p>
+      <%= paginate @incidents %>
+    </nav>
   </section>
