--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -18,5 +18,5 @@
 
 	<%= render 'index-results' %>
 
-	<%= render 'incident-river',  :locals => { :incident => @incident }  %>
+	<%= render 'incident-river'  %>
 </section>
