remove leading zero from incident results dates

--- a/app/views/incidents/_index-results.html.erb
+++ b/app/views/incidents/_index-results.html.erb
@@ -26,13 +26,13 @@
   between
 
   <strong class="start-date">
-    <%= @start_date.strftime("%d %b %Y") %>
+    <%= @start_date.strftime("%e %b %Y") %>
   </strong>
 
   and
 
   <strong class="end-date">
-    <%=@end_date.strftime("%d %b %Y") %>.
+    <%=@end_date.strftime("%e %b %Y") %>.
   </strong>
 </h1>
 
