add an admin bar

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -22,16 +22,15 @@
 @import "partials/links";
 @import "partials/buttons";
 @import "partials/tooltip";
-
 @import "partials/tables";
-
 @import "partials/navigation";
 @import "partials/sub-navigation";
+@import "partials/admin-bar";
 
 @import "partials/layout";
 
 /*------------------------------------*\
-    $GLOBAL
+    $GLOBAL OBJECTS
 \*------------------------------------*/
 
 @import "objects/header";
