--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,4 +18,11 @@
 
 <body class="principles">
 
-<%= render 'layouts/site-header' %>
+  <% if admin_signed_in? %>
+    <nav class="admin-bar" id="admin-bar">
+      <p>Signed in as <%= current_admin.email %></p>
+      <%= link_to "logout", destroy_session_path(:admin), class: 'admin-logout-link' %>
+    </nav>
+  <% end %>
+
+  <%= render 'layouts/site-header' %>
