add a place for notices

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,4 +17,8 @@
 </head>
 
 <body class="principles">
+  <% if notice %>
+    <p class="msg msg-notice"><%= notice %></p>
+  <% end %>
+
   <%= render 'layouts/site-header' %>
