add admin bar to the top

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,4 +27,12 @@
     <p class="msg msg-notice"><%= notice %></p>
   <% end %>
 
+  <% if admin_signed_in? %>
+    <nav class="admin-bar" id="admin-bar">
+      <p>Signed in as <%= current_admin.email %></p>
+
+      <%= link_to "logout",  destroy_admin_session_path, method: :delete, class: 'admin-logout-link' %>
+    </nav>
+  <% end %>
+
   <%= render 'layouts/site-header' %>
