--- a/app/assets/stylesheets/partials/_messages.scss
+++ b/app/assets/stylesheets/partials/_messages.scss
@@ -2,6 +2,10 @@
     @include rem(padding, ms(-5), ms(-5), ms(-3));
     @include rem(border-top-width, ms(-3));
     border-top-style: solid;
+
+    &:first-child {
+        margin-top: 0;
+    }
 }
 
 .msg-error {
@@ -14,7 +18,7 @@
     border-top-color: $color-valid;
 }
 
-.msg-note {
+.msg-notice {
     background-color: $color-salient-light-2;
     border-top-color: $color-warning;
 }
