--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,6 @@
   <%= render 'layouts/site-footer' %>
 
-  <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write("<script src='../assets/jquery-1.9.1.min.js'>\x3C/script>")</script>
+  <%= javascript_include_tag :application %>
 
 	</body>
 </html>
