--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
 
   <meta name="viewport" content="width=device-width">
 
-  <%= stylesheet_link_tag "style", :media => "all" %>
+  <%= stylesheet_link_tag "style.min.css", :media => "all" %>
 
   <%= csrf_meta_tag %>
 
