get assets from public for shared assets

--- a/pattern-lab/_patterns/00-atoms/00-meta/_01-foot.mustache
+++ b/pattern-lab/_patterns/00-atoms/00-meta/_01-foot.mustache
@@ -1,11 +1,9 @@
 
-	<!--DO NOT REMOVE-->
-	{% pattern-lab-foot %}
-    <script src="../../js/jquery-2.0.0b2.js"></script>
-    <script src="../../js/tooltip.js"></script>
-    <script src="../../js/collapsible.js"></script>
-    <script src="../../js/date.picker.js"></script>
-    <script src="../../js/global.js"></script>
+  	<!--DO NOT REMOVE-->
+  	{% pattern-lab-foot %}
+
+    <script src="/javascripts/jquery.min.js?{{ cacheBuster }}" type="text/javascript"></script>
+    <script src="/javascripts/global.min.js?{{ cacheBuster }}" type="text/javascript"></script>
 
 	</body>
 </html>
