--- a/pattern-lab/_patterns/00-atoms/00-meta/_00-head.mustache
+++ b/pattern-lab/_patterns/00-atoms/00-meta/_00-head.mustache
@@ -4,13 +4,13 @@
 		<title>{{ title }}</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width" />
-		
-		<link rel="stylesheet" href="../../css/style.css?{{ cacheBuster }}" media="all" />
+
+		<link rel="stylesheet" href="/stylesheets/style.min.css?{{ cacheBuster }}" media="all" />
 
 		<!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 		{% pattern-lab-head %}
 		<!-- End Pattern Lab -->
-	
+
 	</head>
-	<body class="{{ bodyClass }}">	
-		
+	<body class="{{ bodyClass }}">
+
