comment out copyright link for now

--- a/pattern-lab/_patterns/01-molecules/05-navigation/01-secondary-nav.mustache
+++ b/pattern-lab/_patterns/01-molecules/05-navigation/01-secondary-nav.mustache
@@ -2,5 +2,5 @@
     <li><a href="/glossary">Glossary</a></li>
     <li><a href="/investigations/recipe">Reporting Recipe</a></li>
     <li><a href="/principles">Principles</a></li>
-    <li><a href="/principles" rel="license">Copyright: CC BY</a></li>
+    <!-- <li><a href="/principles" rel="license">Copyright: CC BY</a></li> -->
 </ul>
