fix and remove redundant pagination partial

--- a/pattern-lab/_patterns/03-templates/03-incident-index.mustache
+++ b/pattern-lab/_patterns/03-templates/03-incident-index.mustache
@@ -12,9 +12,9 @@
 
     {{> organisms-incident-index-results }}
 
-	{{> organisms-incident-index-river }}
+  	{{> organisms-incident-index-river }}
 
-    {{> molecules-navigation-pagination }}
+    {{> molecules-pagination }}
 
 </section><!--End role=main-->
 
