use Incident Report rather than Incidents

--- a/app/views/incidents/_incident-river.html.erb
+++ b/app/views/incidents/_incident-river.html.erb
@@ -64,5 +64,6 @@
 </section>
 
 <div class="pagination-details"><%=  page_entries_info @incidents %></div>
+    <%=  page_entries_info @incidents, :entry_name => 'Incident Reports' %>
 
 <%= paginate @incidents %>
