--- a/pattern-lab/_patterns/01-molecules/05-navigation/03-pagination.mustache
+++ b/pattern-lab/_patterns/01-molecules/05-navigation/03-pagination.mustache
@@ -1,5 +1,5 @@
 <section class="pagination-block">
-  <p class="pagination-details">Displaying incidents <strong>1&nbsp;-&nbsp;50</strong> of <strong>7632</strong> in total</p>
+  <p class="pagination-details">Displaying Incident Reports <strong>1&nbsp;-&nbsp;50</strong> of <strong>7632</strong> in total</p>
 
   <nav class="pagination">
     <span class="page current"> 1 </span>
