--- a/app/views/incidents/_incident-river.html.erb
+++ b/app/views/incidents/_incident-river.html.erb
@@ -63,7 +63,10 @@
   </ol>
 </section>
 
-<div class="pagination-details"><%=  page_entries_info @incidents %></div>
+<nav class="pagination-block">
+  <p class="pagination-details">
     <%=  page_entries_info @incidents, :entry_name => 'Incident Reports' %>
+  </p>
 
-<%= paginate @incidents %>
+  <%= paginate @incidents %>
+</nav>
