Use Incident Reports over Incidents

--- a/app/views/incidents/_index-results.html.erb
+++ b/app/views/incidents/_index-results.html.erb
@@ -42,7 +42,7 @@
   <!-- <a class="incident-index-order-by" href="" title="Reorder the filter results, currently sorted by newest first, to see the oldest incident first.">See oldest first</a> -->
     <nav class="pagination-block">
       <p class="pagination-details">
-        <%=  page_entries_info @incidents %>
+        <%=  page_entries_info @incidents, :entry_name => 'Incident Reports' %>
       </p>
 
       <%= paginate @incidents %>
