move scss for incident index river (big table thing) into individual partial

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -63,6 +63,7 @@
 @import "objects/incidents/incident-index";
 @import "objects/incidents/incident-index-filters";
 @import "objects/incidents/incident-index-results";
+@import "objects/incidents/incident-index-river";
 
 @import "objects/incidents/incident-adopt";
 
